General Fixing & Improvement

--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -16,16 +16,27 @@ search_ignore: true
 ---
 
 {% assign sorted_tags = site.tags | sort %}
-<div>
-{% for tag in sorted_tags %}
-  <div>
-    <h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}} Posts)</h3>
-    <ul>
+<table>
+  <thead>
+    <tr>
+      <th>标题</th>
+      <th>{% include fn/icon.html type="calander" size="1.5rem"%} 日期</th>
+      <th>{% include fn/icon.html type="people" size="1.5rem"%} 作者</th>
+      <th>链接</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% for tag in sorted_tags %}
+    <tr><td><h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}} Posts)</h3></td><td></td><td></td><td></td></tr>
       {% for post in tag[1] %}
-        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+        <tr>
+          <td>{{ post.title }}</td>
+          <td>{{ post.date | date_to_string }}</td>
+          <td>{{ post.Author | join: ', '}}</td>
+          <td><a class="tag" href="{{ site.baseurl }}{{ post.url }}">链接</a></td>
+        </tr>
       {% endfor %}
-    </ul>
-  </div>
-{% endfor %}
-</div>
+  {% endfor %}
+  </tbody>
+</table>
 
