--- a/_posts/2021-01-26-Schedule.md
+++ b/_posts/2021-01-26-Schedule.md
@@ -10,22 +10,7 @@ useTOC: false
 
 ## Timeline and Important Events 📅
 
-<div class="notification">
-    <h4>ACSL Round 4</h4>
-    <p>2021 Mar 5 - 2021 May 16</p>
-</div>
-
-<div class="info">
-    <h4>Google Code Jam</h4>
-    <p>
-        <ul>
-            <li>Round 1A, Apr 10 2021, 09:00 - Apr 10 2021, 11:30</li>
-            <li>Round 1B, Apr 26 2021, 00:00 - Apr 26 2021, 02:30</li>
-            <li>Round 1C, May 1 2021, 17:00 - May 1 2021, 19:30</li>
-            <li>Round 2, May 15 2021, 22:00 - May 16 2021, 00:30</li>
-        </ul>
-    </p>
-</div>
+{% include schedule.html %}
 
 ## Meet TAs!
 
