Major update on Image Wall

--- a/_posts/misc/2021-01-26-About-Us.md
+++ b/_posts/misc/2021-01-26-About-Us.md
@@ -33,7 +33,7 @@ useTOC: false
         <h3>网页维护中心 Site Maintainance</h3>
         <div style="background: url('../../../../assets/maintain.svg') no-repeat right bottom; height: 7rem; background-size: contain;"></div>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/03/08/GWCS-Rules.html'">
+    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/14/dev-tools.html'">
         <h3>开发者工具箱 Developer Toolbox</h3>
         <div style="background: url('../../../../assets/console.svg') no-repeat right bottom; height: 7rem; background-size: contain;"></div>
     </div>
