Fix typo, turn image to eager

--- a/_posts/other-analysis/2021-6-25-AtCoder-E-206.md
+++ b/_posts/other-analysis/2021-6-25-AtCoder-E-206.md
@@ -6,7 +6,6 @@ Author: ["Mark Chen"]
 question: E
 number: 206
 ---
-{% raw %}
 ### 题目翻译
 
 题目中要求找到 $(x, y)$ 的数量使得 $L\leq x, y\leq R$  且满足条件 $gcf(x, y) \neq 1$, $gcf(x, y) \neq x$ $gcf(x, y) \neq y$.
@@ -30,7 +29,7 @@ number: 206
 $$
 \text{#Pair} = \underbrace{L-x}_{\text{Number of }y\text{ in range }(x, R]} - \underbrace{\left(\lfloor\frac{R}{x}\rfloor - 1 \right)}_{\text{Number of }y\text{ that is multiple of }x}
 $$
-
+{% raw %}
 #### 用数学公式计算互质的数对
 
 类似的，我们现在需要找到一条数学公式来快速计算 $x\lt y\leq R$  中所有 $x, y$ 不互质的数对。
@@ -75,7 +74,7 @@ $$
 
 所以这里我们要使用**容斥原理**。
 
-![e4e1fe1e28981989efb577a651144c0](https://i.loli.net/2021/06/25/xgiTNznb3IfL7UW.jpg)
+<img src="https://i.loli.net/2021/06/25/xgiTNznb3IfL7UW.jpg" loading="eager"/>
 
 $$
 \text{#Not Coprime Pair} = \sum_{k\text{ with odd prime factors}} {\mathbb{C}_2^N} - \sum_{k\text{ with even prime factors}} {\mathbb{C}_2^N}
@@ -97,7 +96,7 @@ $$
 Result = \text{#Not Coprime Pair} - \text{#pairs of (x, mx)}
 $$
 
-让 $K_{odd}$ 是有奇数个质因数的$k$值在 $[2, R]$ 的集合，让 $K_{even}$ 是有奇数个质因数的$k$值在 $[2, R]$ 的集合。我们可以得出这样的式子：
+让 $K_{odd}$ 是有奇数个质因数的$k$值在 $[2, R]$ 的集合，让 $K_{even}$ 是有偶数个质因数的$k$值在 $[2, R]$ 的集合。我们可以得出这样的式子：
 
 $$
 \begin{aligned}
