Add {{raw}} tag to prevent Liquid take in MathJax while rendering and led to Exception

--- a/_posts/other-analysis/2021-6-26-AtCoder-E-206.md
+++ b/_posts/other-analysis/2021-6-26-AtCoder-E-206.md
@@ -116,15 +116,17 @@ $$
 对于每一个在 $[L, R]$ 区间内的值，使用以下公式我们都可以计算出它有多少个 pairs 是 $(x, mx)$ 形式的：
 
 $$
-MultPair = \sum_{x=L}^R{{\lfloor\frac{R}{x}\rfloor} - 1}
+{% raw %}MultPair = \sum_{x=L}^R{{\lfloor\frac{R}{x}\rfloor} - 1}{% endraw %}
 $$
 
 所以最后的结果如下:
 
 $$
+{% raw %}
 \begin{aligned}
 Result &= \sum_{k\in\mathbb{K}_{odd}}{\mathbf{C}_{\lfloor\frac{R}{k}\rfloor - \lfloor\frac{L-1}{k}\rfloor}^2} - \sum_{k\in\mathbb{K}_{even}}{\mathbf{C}_{\lfloor\frac{R}{k}\rfloor - \lfloor\frac{L-1}{k}\rfloor}^2} - \sum_{x=L}^R{{\lfloor\frac{R}{x}\rfloor} - 1}
 \end{aligned}
+{% endraw %}
 $$
 
 ### 编程实现
