Add 'Support Us' Page

--- a/_posts/misc/2021-01-26-About-Us.md
+++ b/_posts/misc/2021-01-26-About-Us.md
@@ -37,6 +37,9 @@ useTOC: false
         <h3>开发者工具箱 Developer Toolbox</h3>
         <div style="background: url('../../../../assets/console.svg') no-repeat right bottom; height: 7rem; background-size: contain;"></div>
     </div>
+    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/28/Support-Us.html'">
+        <h3>支持我们 Support Us</h3>
+    </div>
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/02/26/Image-Archive.html'">
         <h3>照片墙 Image Archive</h3>
     </div>
