Standardize SASS Size controler with rem unit in variable.sass

--- a/_posts/notes/acsl/2021-01-26-ACSL.md
+++ b/_posts/notes/acsl/2021-01-26-ACSL.md
@@ -10,7 +10,7 @@ useTOC: false
     ACSL今年编程题使用线上赛模式，选手需要在72小时内在 Hackerrank 上完成指定题目，可以多次运行测试。
 </div>
 
-<div class="card-box">
+<div class="horizontal-flex-box">
     <div class="flex-page-card" onClick="window.location.href='{{ site.baseurl }}/2020/12/15/ACSL-Round1.html'">
         <h3>ACSL Round 1</h3>
         <p>
