Grid Layout Update to Mordern-component.sass, reactive Grid Layout template

--- a/_posts/misc/2021-01-26-About-Us.md
+++ b/_posts/misc/2021-01-26-About-Us.md
@@ -19,28 +19,28 @@ useTOC: false
 
 ## More About Us
 
-<div class="horizontal-flex-box">
-    <div class="flex-page-card" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/04/27/Contributors.html'">
+<div class="horizontal-grid-box">
+    <div class="grid-page-card" onClick="window.location.href='{{ site.baseurl }}/secondary-pages/2021/04/27/Contributors.html'">
         <h3>网站贡献者 Contributors</h3>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/03/04/Previous-Member.html'">
+    <div class="grid-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/03/04/Previous-Member.html'">
         <h3>社团历届成员 Previous Members</h3>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/04/10/Copyright.html'">
+    <div class="grid-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/04/10/Copyright.html'">
         <h3>网页版权信息 Copyright</h3>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/05/30/Site-Management.html'">
+    <div class="grid-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/05/30/Site-Management.html'">
         <h3>网页维护中心 Site Maintainance</h3>
-        <div style="background: url('../../../../assets/maintain.svg') no-repeat right bottom; height: 7rem; background-size: contain;"></div>
+        <div style="background: url('../../../../assets/maintain.svg') no-repeat right bottom; height: 4rem; background-size: contain;"></div>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/14/dev-tools.html'">
+    <div class="grid-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/14/dev-tools.html'">
         <h3>开发者工具箱 Developer Toolbox</h3>
-        <div style="background: url('../../../../assets/console.svg') no-repeat right bottom; height: 7rem; background-size: contain;"></div>
+        <div style="background: url('../../../../assets/console.svg') no-repeat right bottom; height: 4rem; background-size: contain;"></div>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/28/Support-Us.html'">
+    <div class="grid-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/28/Support-Us.html'">
         <h3>支持我们 Support Us</h3>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/02/26/Image-Archive.html'">
+    <div class="grid-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/02/26/Image-Archive.html'">
         <h3>照片墙 Image Archive</h3>
     </div>
 </div>
