Update Arduino Sonar, Update AtCoder #209

--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -3,7 +3,6 @@ layout: page
 title: All Posts
 categories: secondary-pages
 tags: Page
-useTOC: false
 search_ignore: true
 ---
 
@@ -16,6 +15,8 @@ search_ignore: true
 ---
 
 {% assign sorted_tags = site.tags | sort %}
+{% for tag in sorted_tags %}
+<h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}})</h3>
 <table>
   <thead>
     <tr>
@@ -26,8 +27,6 @@ search_ignore: true
     </tr>
   </thead>
   <tbody>
-  {% for tag in sorted_tags %}
-    <tr><td><h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}} Posts)</h3></td><td></td><td></td><td></td></tr>
       {% for post in tag[1] %}
         <tr>
           <td>{{ post.title }}</td>
@@ -36,7 +35,6 @@ search_ignore: true
           <td><a class="tag" href="{{ site.baseurl }}{{ post.url }}">链接</a></td>
         </tr>
       {% endfor %}
-  {% endfor %}
   </tbody>
 </table>
-
+{% endfor %}
