--- a/_posts/2021-04-12-Search.md
+++ b/_posts/2021-04-12-Search.md
@@ -4,6 +4,7 @@ title: 站内搜索
 tags: Page
 categories: secondary-pages
 useTOC: false
+search_ignore: true
 ---
 欢迎使用 GW CS Club 网站的站内搜索功能，搜索支持 中/英文搜索 内容，tag，日期，标题。 如果你发现你想要的结果不在候选列表里面，有可能是因为候选项数量 $> 30$ 被忽略了。
 
@@ -33,6 +34,6 @@ SimpleJekyllSearch({
   json: '/search.json',
   limit: 30,
   debounceTime: 125,
-  success: addAnimationDelay
+  success: addAnimationDelay,
 })
 </script>
