Add Use-search engine tips, Fix tag hyperlinks

--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -16,7 +16,8 @@ search_ignore: true
 
 {% assign sorted_tags = site.tags | sort %}
 {% for tag in sorted_tags %}
-<h3 id="{{ tag[0] }}">{{ tag[0] }} ({{tag[1] | size}})</h3>
+<div id="{{ tag[0] }}"></div>
+<h3>{{ tag[0] }} ({{tag[1] | size}})</h3>
 <table>
   <thead>
     <tr>
