Update Queue Note

--- a/_posts/notes/Algorithm/2021-05-10-Queue.md
+++ b/_posts/notes/Algorithm/2021-05-10-Queue.md
@@ -39,11 +39,11 @@ class Queue:
 
 	def push(self, element):
 		self.data.append(element)
-
+	
 	def pop(self):
 		if len(self.data) > 0: return self.data.pop(0)
 		else: raise Exception("Cannot pop from an Empty Queue")
-
+	
 	</code>
 	<code class="java">
 import java.util.*;
@@ -54,7 +54,7 @@ class Queue{
 	public void push(int element){
 		this.arr.add(element);
 	}
-
+	
 	public int pop(){
 		if (this.arr.size() > 0){
 			int result = this.arr.get(0);
@@ -75,9 +75,107 @@ class Queue{
 
 下面我们来看看如何使用刚刚学习的 **链表** 数据结构来提高 Queue 的效率
 
-#### 1 - 更加高效的队列
+#### 1 - 更加高效的队列（链表）
 
 虽然访问链表中间的第 $n$ 个元素需要 $O(n)$ 的时间复杂度，我们可以非常方便的在链表的首尾做对元素进行增删的操作。每次在链表末尾增添一个元素只需要 $O(1)$ 的时间复杂度；同时，删除链表头部的元素也只需要 $O(1)$ 的时间复杂度。通过这两个特性，我们可以让队列做到进出都只需要 $O(1)$ 的时间复杂度。
+
+<pre>
+	<code class="python">
+class LinkedListNode:
+    def __init__(self, val: int) -> None:
+        self.next = None
+        self.val = val
+
+class Queue:
+    def __init__(self) -> None:
+        self.head = None
+        self.tail = None
+        self.size = 0
+    
+    def push(self, val: int) -> None:
+        self.size += 1
+        new_node = LinkedListNode(val)
+        if self.head == None:
+            self.head = new_node
+            self.tail = new_node
+        else:
+            self.tail.next = new_node
+            self.tail = self.tail.next
+    
+    def pop(self) -> int:
+        self.size -= 1
+        val = self.head.val
+        self.head = self.head.next
+        return val
+    
+    def size(self) -> int:
+        return self.size
+    
+    def peek(self) -> int:
+        return self.head.val
+    
+    def __str__(self) -> str:
+        ptr = self.head
+        string = "HEAD -> "
+        while ptr.next != None:
+            string += str(ptr.val) + " -> "
+            ptr = ptr.next
+        string += str(ptr.val) + " -> "
+        string += "TAIL"
+        return string
+    </code>
+    <code class="java">
+Not Implemented yet, see Python Version
+	</code>
+</pre>
+
+#### 2 - 更加高效的队列（循环数组）
+
+除了链表以外，我们还可以用循环数组来实现队列。
+
+![b0da01935156ce1789cbf366607545d](http://markdown-img-1304853431.cosgz.myqcloud.com/20210730170748.jpg)
+
+<pre>
+	<code class="python">
+class Queue:
+    def __init__(self, max_capacity: int) -> None:
+        self.arr = [0] * max_capacity
+        self.max_len = max_capacity
+        self.start = 0
+        self.end = 0
+    
+    def size(self) -> int:
+        return self.end - self.start
+    
+    def push(self, item: int) -> None:
+        self.end += 1
+        actual_index = (self.end - 1) % self.max_len
+        self.arr[actual_index] = item
+    
+    def pop(self) -> None:
+        actual_index = self.start % self.max_len
+        self.start += 1
+        return self.arr[actual_index]
+    
+    def peek(self) -> int:
+        return self.arr[self.start % self.max_len]
+    
+    def __str__(self) -> str:
+        string = "[ "
+        for index, num in enumerate(self.arr):
+            string += str(num)
+            if index == self.start % self.max_len:
+                string += "(START)"
+            if index == self.end % self.max_len:
+                string += "(END)"
+            string += " | "
+        string += " ]"
+        return string
+	</code>
+	<code class="java">
+Not Implemented Yet, see Python Version
+	</code>
+</pre>
 
 ### 练习
 
