--- a/_posts/misc/contributor/2021-06-14-dev-tools.md
+++ b/_posts/misc/contributor/2021-06-14-dev-tools.md
@@ -8,6 +8,9 @@ useTOC: false
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/11/yaml-generator.html'">
         <h2>通用打卡文件生成器</h2>
     </div>
+    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/07/30/online-editor.html'">
+        <h2>Markdown 在线编辑器</h2>
+    </div>
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/11/yaml-generator.html'">
         <h2> 更多工具正在开发中 ……</h2>
         <div style="background: url('../../../../assets/more.svg') no-repeat center bottom; height: 7rem; background-size: contain;"></div>
