Fix CS188 Ch 13 Formula @ Bayes Probability; Add CS188 Ch15 (not finished); Fix Online Editor Style

--- a/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
+++ b/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
@@ -282,7 +282,7 @@ Combining these two forms together and divide both sides by $P(a)$, we get
 <div class="info">
     <b>Bayes' Rule</b>
     <p>
-        P(b\mid a) = \frac{P(a\mid b)P(b)}{P(a)}
+        $$P(b\mid a) = \frac{P(a\mid b)P(b)}{P(a)}$$
     </p>
 </div>
 
