--- a/_posts/misc/2021-01-26-About-Us.md
+++ b/_posts/misc/2021-01-26-About-Us.md
@@ -12,7 +12,7 @@ useTOC: false
 
 我们欢迎所有想从0开始学习编程或者继续精进自己编程技术的人。我们并不局限于特殊的几种编程语言与竞赛，如果你想做任何有趣的编程项目，我们欢迎你将自己的代码仓库链接展示在我们的网页上。
 
-<img src="{{ site.baseurl }}/assets/2021Members.png" style="border-radius: 10px"/>
+<img src="https://i.loli.net/2021/08/03/hV5g2iftumoczvY.jpg" style="border-radius: 10px"/>
 <div style="clear: both"></div>
 
 
