on RSS Feature, proper <meta> tag setting in head.html

--- a/_posts/misc/contributor/2021-06-14-dev-tools.md
+++ b/_posts/misc/contributor/2021-06-14-dev-tools.md
@@ -11,7 +11,7 @@ useTOC: false
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/07/30/online-editor.html'">
         <h2>Markdown 在线编辑器</h2>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/06/11/yaml-generator.html'">
+    <div class="flex-page-card">
         <h2> 更多工具正在开发中 ……</h2>
         <div style="background: url('../../../../assets/more.svg') no-repeat center bottom; height: 7rem; background-size: contain;"></div>
     </div>
