--- a/_posts/notes/cs188/2021-02-28-CS188-Chapter2.md
+++ b/_posts/notes/cs188/2021-02-28-CS188-Chapter2.md
@@ -3,6 +3,7 @@ layout: post
 title: CS188 Chapter 2 Intelligent Agents
 Author: ["Mark Chen"]
 tags: Notes CS188
+onRSS: true
 ---
 
 ## Chapter 2 Intelligent Agents
