--- a/_posts/notes/cs188/2021-06-13-CS188-Chapter14.md
+++ b/_posts/notes/cs188/2021-06-13-CS188-Chapter14.md
@@ -3,6 +3,7 @@ layout: post
 title: CS188 Chapter 14 Probabilistic Reasoning
 Author: ["Mark Chen"]
 tags: [Notes, CS188]
+onRSS: true
 ---
 
 ## 14.1 Representing Knowledge in an Uncertain Domain
