Update CS188 Chap 15 Note, NOTICE: seems like the shadow syntax of CSS has been changed, shadows are not showing up properly currently.

--- a/_posts/notes/cs188/2021-02-24-CS188-Home.md
+++ b/_posts/notes/cs188/2021-02-24-CS188-Home.md
@@ -50,3 +50,4 @@ Try connect the internet in a more scientific way to see this playlist.
 | 6 | Quantifying Uncertainty (Ch 13) | 这一章描述了为何我们要在 Intelligent Agent 中引入不确定性和我们如何在 Intelligent Agent 中利用概率学知识做出决策 |<a href="{{site.baseurl}}/2021/05/30/CS188-Chapter13.html" class="tag">笔记</a>|
 |  | Case Study - Naive Bayes | 在这次 Case Study 中，我们会使用 Chapter 13 中描述的 Naive Bayes 来搭建一个可以分辨 MNIST 手写数字数据集的贝叶斯分类器 |<a href="{{ site.baseurl}}/2021/06/04/CS188-Naive-Bayes-MNIST.html" class="tag">Case Study</a>|
 | 7 | Probabilistic Reasoning (Ch 14) | 这一章描述了贝叶斯网络的定义，构建与概率推断方法。概率推断方法包括精确计算与取样估计法。 |<a href="{{ site.baseurl }}/2021/06/13/CS188-Chapter14.html" class="tag">笔记</a>|
+| 8 | Probabilistic Reasoning over Time (Ch 15) | 这一章描述了如何计算随机变量的概率分布随时间推移的变化，主要讲解了 Hidden Markov Model 中的 Filtering, Prediction, Smoothing 与 Most Likely Explanation 方法 |<a class="tag" href='{{site.baseurl}}/2021/08/15/CS188-Chapter15.html'>笔记</a>|
