Finish Ch15 Note

--- a/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
+++ b/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
@@ -205,7 +205,7 @@ Combining the **Marginalization** and **Normalization**, we can get a general eq
     <p>
         $$
         \mathbf{P}(X\mid \mathbf{e}) 
-        = \underbrace{\alpha\mathbf{P}(X\mid \mathbf{e})}_{\text{Normalization with constant } \alpha}
+        = \underbrace{\alpha\mathbf{P}(X, \mathbf{e})}_{\text{Normalization with constant } \alpha}
         = \alpha \cdot \underbrace{
         	\sum_{\mathbf{y}\in Y}{\overbrace{
         		\mathbf{P}(X,\mathbf{e}, \mathbf{y})}^{\text{Full joint distribution}}
