--- a/_posts/notes/cs188/2021-08-15-CS188-Chapter15.md
+++ b/_posts/notes/cs188/2021-08-15-CS188-Chapter15.md
@@ -223,6 +223,8 @@ $$
 
 </div>
 
+> $\mathbf{P}(\mathbf{X}_ {0}\mid e_ {1:0})$ is the probability distribution of state variable when NO CLUE is provided. Therefore, this value is a prior knowledge.
+
 #### Prediction
 
 <div class="info">
@@ -332,10 +334,83 @@ $$
 
 $$
 \begin{aligned}
-&=\alpha\mathbf{P}(X_k\mid e_ {1:k}) \mathbf{P}(e_ {k+1:t} \mid X_k) \\
-&=\alpha\text{ Filtering}(X_k) \text{Backward}(X_k, e_ {k+1:t})
+&=\alpha\mathbf{P}(X_k\mid e_ {1:k}) \mathbf {P}(e_ {k+1:t} \mid X_k) \\
+&=\alpha\text{ Filtering}(X_k) \text{Backward}(X_k, e_ {k+1:t})\\
+&=\alpha
+  \mathbf{P}(e_ {k} \mid \mathbf{X}_ {k})
+  \mathbf{P}(\mathbf{X}_ {k} \mid \mathbf{x}_ {k - 1})
+  \mathbf{P}(\mathbf{x}_ {k - 1} \mid e_ {1: k-1})
+  \text{Backward}(X_k, e_ {k+1:t}) \\
 \end{aligned}
 $$
 
-For the "Filtering" part, we can call filtering function described above. Below will discuss the "Backward" part:
+For the "Filtering" part, we can call filtering function described above. Below will discuss the "Backward" part. Backward function will broadcast information from "future" to the state we want to apply smoothing on.
 
+1.Conditioning on $\mathbf{X}_ {k + 1}$
+
+$$
+\mathbf {P}(e_ {k+1:t} \mid X_k) = \sum_ {x_ {k + 1}}{
+  \mathbf{P}(\mathbf{e}_ {k + 1 : t} \mid \mathbf{X}_ {k}, \mathbf{x}_ {k + 1})
+  \mathbf{P}(\mathbf{x}_ {k + 1} \mid \mathbf{X}_ {k})
+}
+$$
+
+2.Conditional Independence
+
+$$
+= \sum_ {x_ {k + 1}}{
+  \mathbf{P}(\mathbf{e}_ {k + 1 : t} \mid \mathbf{x}_ {k + 1})
+  \mathbf{P}(\mathbf{x}_ {k + 1} \mid \mathbf{X}_ {k})
+}
+$$
+
+3.Split Evidence variables set
+
+$$
+= \sum_ {x_ {k + 1}}{
+  \mathbf{P}(\mathbf{e}_ {k + 1}, \mathbf{e}_ {k + 2 : t} \mid \mathbf{x}_ {k + 1})
+  \mathbf{P}(\mathbf{x}_ {k + 1} \mid \mathbf{X}_ {k})
+}
+$$
+
+4.
+
+$$
+= \sum_ {x_ {k + 1}}{
+  P (\mathbf{e}_ {k + 1} \mid \mathbf{x}_ {k + 1})
+  P (\mathbf{e}_ {k + 2 : t} \mid \mathbf{x}_ {k + 1})
+  \mathbf{P}(\mathbf{x}_ {k + 1} \mid \mathbf{X}_ {k})
+}
+$$
+
+We can find that $\mathbf {P}(e_ {k+1:t} \mid X_k)$'s expression contains $\mathbf {P}(e_ {k+2:t} \mid X_ {k + 1})$. So the evaluation process is a **recursive** process.
+
+$$
+\begin{aligned}
+\mathbf {P}(e_ {k+1:t} \mid X_k) &= \mathbf{b}_ {k + 1: t}\\
+&= \text{Backward}(\mathbf{b}_ {k + 2: t}, \mathbf{e}_ {k + 1})
+\end{aligned}
+$$
+
+But there is one problem - as the size of evidence set increase, it will take increasing time to perform a smoothing operation (as it requires recursivly called from $k$ to $t$).
+
+To solve this problem, a strategy called "**fixed-lag smoothing**" is proposed. For any $k$ that is called to smoothing on $X_k$, the *Backward* function will only called recursively to $k+n$ where $n$ is a constant.
+
+### 15.2.3 Finding the most likely sequence
+
+Sometimes, when we get a series of evidence value from sensor, we want to know the *most-likely* sequence of hidden state that can lead to such series of evidence value. Using mathematical language, we can describe finding most-likely sequence as such expression:
+
+$$
+\max_ {x_ 1\cdots, x_ t}\mathbf{P}(x_ 1, \cdots, x_ t, \mathbf{X}_ {t+1} \mid \mathbf{e}_ {1:t+1})
+$$
+
+There is a recursive relationship between each state in the most-likely sequence.
+
+$$
+=\alpha \mathbf{P}(\mathbf{e}_ {t+1} \mid \mathbf{X}_ {t+1}) \max_ {\mathbf{x}_ t}{(
+  \mathbf{P}(\mathbf{X}_ {t+1} \mid \mathbf{x}_ {t})
+  \max_ {\mathbf{x}_ 1\cdots \mathbf{x}_ {t - 1}}{
+      P(x_ 1, \cdots, x_ {t - 1}, x_ t \mid \mathbf{e}_ {1:t})
+    }
+)}
+$$
