--- a/_posts/notes/Algorithm/2021-04-15-Stack.md
+++ b/_posts/notes/Algorithm/2021-04-15-Stack.md
@@ -23,7 +23,7 @@ onRSS: true
 
 因为Stack的两个操作，我们也可以将Stack记为LIFO(last in, first out)，也叫后进先出。
 
-<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210415144351.png" alt="img" style="zoom: 67%;" />
+<img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210415144351.png" alt="img" style="zoom: 67%;" />
 
 在栈(stack)中，还有几种常见的方法：
 
