--- a/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
+++ b/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
@@ -126,7 +126,7 @@ def depthFirstSearch(initialState, getSuccessor, getValidActions):
 
 There is a common problem in BFS and DFS: They **don't care the ACTUAL COST of action sequence** to the goal state. Though BFS will return the Shortest action sequence to goal state, the shortest action sequence may not be the action sequence with lowest cost, like the example below shows:
 
->  <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210319224716.jpg" alt="6e5f63b38286cc81fc07f61886fabb9" style="zoom:33%; display: block; margin: 0 auto" />
+>  <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210319224716.jpg" alt="6e5f63b38286cc81fc07f61886fabb9" style="zoom:33%; display: block; margin: 0 auto" />
 >
 > The number inside each grid is the **cost** to go through that grid, $S$ is the initial state and $G$ is the goal state. In this case, the shortest action sequence $A$ has a Much Higher cost comparing to the min-cost action sequence $A^*$.
 
