--- a/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
+++ b/_posts/notes/cs188/2021-04-22-CS188-Chapter5.md
@@ -43,7 +43,7 @@ Though a game tree is well-defined and has finite amount of nodes in it, it is b
 
 In an adversarial search scene, the MAX agent must find a contingent **strategy**. An optimal strategy leads to outcomes at least as good as other strategy when one is playing an infallible opponent.
 
-![image-20210422204817496](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210422204817.png)
+![image-20210422204817496](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210422204817.png)
 
 > In the graph above, the maximum utility at node $A$ is 3, since the MAX agent can't change the choice of MIN agent, and in the worst situation (no matter which action MAX agent choose, MIN will always select the successor with min utility for MAX), the maximum utility at $A$ is 3, when MAX takes action $a_1$.
 
@@ -111,7 +111,7 @@ When we are using minimax decision algorithm, we have to travel through the game
 
 Here, we will apply **alpha-beta pruning** on the standard minimax tree. It will return the same move as minimax decision algorithm would and prunes away branches that can't possibly influence the final decision.
 
-![image-20210423095210359](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210423095210.png)
+![image-20210423095210359](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210423095210.png)
 
 The idea of alpha-beta pruning comes from a very simple observation - in some cases, we don't need to find all successors' utilities to calculate the minimax value at a node. For instance, in the fig above, when we see the maximum minimax value at $C$ is 2, we know its minimax value must be smaller than $B$'s minimax value (which is 3) and we can ignore the other two nodes (dash line) under $C$.
 
@@ -119,7 +119,7 @@ If Player has a better choice than $n$, $n$ will *never be reached in actual pla
 
 Below shows a general case for alpha-beta pruning:
 
-![image-20210423101148347](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210423101148.png)
+![image-20210423101148347](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210423101148.png)
 
 $\alpha=$ the minimax value of the best choice (max-value) we have found so far at any choice point along the path for MAX
 
