--- a/_posts/posts/Neural_Network/2020-01-04-U-net.md
+++ b/_posts/posts/Neural_Network/2020-01-04-U-net.md
@@ -13,11 +13,11 @@ U-net与其他机器视觉神经网络的根本区别：
 
 - **一般的神经网络执行分类操作，输入一张图片，输出一个向量，其中每一项对应该图片属于对应标签的概率**
 
-![img](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210502162926.jpeg)
+![img](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210502162926.jpeg)
 
 * **U-net 对图片进行“语义分割”，输出的信息不但包括对图片中属性特征的识别，还包括对于指定物体位置的识别**
 
-![img](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210502162929.jpeg)
+![img](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210502162929.jpeg)
 
 过去进行对图像进行语义分割的一种尝试是：通过提供一个像素周边的环境，训练网络识别这个像素属于的物体的类型。
 
@@ -25,7 +25,7 @@ U-net与其他机器视觉神经网络的根本区别：
 
 - **处理速度太慢** 因为神经网络每次要单独训练，而且划分的Patch之间有很大的冗余重复
 
-  ![img](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210502162931.jpeg)
+  ![img](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210502162931.jpeg)
 
 - **网络的设计需要在确定位置和更大的感受野之间权衡** 当使用尺寸更大的Patch时，需要使用更多的池化层，会降低网络确定像素位置的能力；当网络使用尺寸较小的Patch时，神经网络的感受野（对周边特征的“视野”）会变小。
 
@@ -41,19 +41,19 @@ U-net与其他机器视觉神经网络的根本区别：
 
 因此，本文作者基于“完全卷积网络”设计了 U-net 神经网络架构（如下图），用以处理图像的语义分割问题
 
-![img](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210502162934.jpeg)
+![img](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210502162934.jpeg)
 
 在这个网络中，图片首先通过最大池化层进行“下采样”，减小图片分辨率的同时使用3*3卷积核提取图片的特征，每一层中，提取的特征通道数量是输入特征通道数量的两倍。通过这种方法，最后将输入图片转化为大小28*28，具有1024个特征通道状态。
 
 接着，网络通过2*2的卷积核对图片进行上采样（如下图所示，但下图中使用的是3*3卷积核）
 
-![img](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210502162937.jpeg)
+![img](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210502162937.jpeg)
 
 需要注意的是在上采样的过程中，图片依然保存了大量的特征通道，这有助于网络将图片周边的环境向上传播
 
 与此同时，为了提高图片的分辨率，网络还会将池化前的特征通道**经过裁剪后（裁剪是由于无填充像素下卷积操作带来的无法避免的尺寸减小导致的，如下图所示）**复制到上采样时的状态中，再使用一个3*3卷积核将这些特征通道进一步整合起来。
 
-![img](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210502162939.jpeg)
+![img](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210502162939.jpeg)
 
 如此重复此步骤直到图片的尺寸重新被放大至392*392 pixel （作为对比，输入是572*572像素，大小的减少是由于重复卷积操作导致的），此时图片依然有多达64个特征通道。
 
