--- a/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
+++ b/_posts/notes/acsl/2021-04-13-ACSL-Round4.md
@@ -20,7 +20,7 @@ Author: ["Mark Chen"]
 
 |          | 有向图                                                       | 无向图                                                       |
 | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 图像     | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413144549.jpg" alt="266263ebbf6a411166c5e22637f46b2" style="zoom: 20%;" /> | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413144713.jpg" alt="e3c381417e545061c5924dac1690fce" style="zoom:20%;" /> |
+| 图像     | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413144549.jpg" alt="266263ebbf6a411166c5e22637f46b2" style="zoom: 20%;" /> | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413144713.jpg" alt="e3c381417e545061c5924dac1690fce" style="zoom:20%;" /> |
 | 表示方法 | 有向图中，因为$AB$与$BA$ 表示的边不同，我们要分开表示。<br />$$V = \{A, B, C, D, E\}\\E=\{AB, AC, BE, CB, DB, ED\}$$ | 无向图中，边没有方向，两个节点间的边我们直接表示为两个节点即可。<br />$$V = \{A, B, C, D, E\}\\E=\{AB, AC, AE, BD, CD\}$$ |
 | 边数     | 在有向图中，边数的取值范围：$E\in[V, V^2]$                   | 在无向图中，边数的取值范围：$E\in[V, V(V-1)/2]$              |
 
@@ -46,7 +46,7 @@ Author: ["Mark Chen"]
 
 例如下面这张图 
 
-<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413144549.jpg" alt="266263ebbf6a411166c5e22637f46b2" style="zoom: 30%; display: block; margin: 0 auto 0 auto;" /> 
+<img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413144549.jpg" alt="266263ebbf6a411166c5e22637f46b2" style="zoom: 30%; display: block; margin: 0 auto 0 auto;" /> 
 
 就可以用这样的一个矩阵表示：
 
@@ -78,7 +78,7 @@ $$
 
 <details>
     <summary>点击查看矩阵乘法快速入门</summary>
-    <p><img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210414163958.png" alt="OIP" style="zoom:80%;" /></p>
+    <p><img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210414163958.png" alt="OIP" style="zoom:80%;" /></p>
     <p>在这个专题中的邻接矩阵都一定是 $N\times N$ 的方阵，所以不用考虑矩阵乘法的维度问题。</p>
     <p>
         如上图，对于一个给定的矩阵 $M$，如果我们想计算它的乘方，一种简便方法是将一个矩阵 $M$ 写在左侧，将相同的矩阵 $M$ 写在上方。这样我们计算 $M^2_{ij}$ 就只用计算 $M$ 的第 $i$ 行与 $M$ 的第 $j$ 列之间的点积结果就行了。
@@ -119,7 +119,7 @@ $$
 
 In the following directed graph, find the number of different paths from vertex $A$ to vertex $C$ of length 2 or 4.
 
-<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413165518.png" alt="image-20210413165518570" style="zoom: 33%;" />
+<img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413165518.png" alt="image-20210413165518570" style="zoom: 33%;" />
 
 **解答**
 
@@ -151,13 +151,13 @@ $$
 
 How many cycles are in the following graph?
 
-<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413170239.png" alt="image-20210413170239860" style="zoom:40%;" />
+<img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413170239.png" alt="image-20210413170239860" style="zoom:40%;" />
 
 解答
 
 这种题目适合用枚举法做
 
-<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413171354.png" alt="image-20210413171354619" style="zoom: 67%;" />
+<img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413171354.png" alt="image-20210413171354619" style="zoom: 67%;" />
 
 #### 1.3.3 Adjacency Matrix 和 Graph 互相转化
 
@@ -274,7 +274,7 @@ LOC部分引⽤⼀个LABEL或者⼀个immediate data，如常数 `321`。
 
 例题：
 
-![image.0](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413185355.png)
+![image.0](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413185355.png)
 
 
 ### 2.4 练习
@@ -303,14 +303,14 @@ LOC部分引⽤⼀个LABEL或者⼀个immediate data，如常数 `321`。
 
 | Name   | Symbol                                                       | Boolean Expression           | Truth Table                                                  |
 | ------ | ------------------------------------------------------------ | ---------------------------- | ------------------------------------------------------------ |
-| BUFFER | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202010.png" alt="File:Buffer-gate-en.svg" style="width: 50%" /> | $out = A$                    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202743.png" alt="image-20210413202743274" style="zoom:50%;" /> |
-| NOT    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202704.png" alt="File:Not-gate-en.svg" style="width: 50%;" /> | $out = \bar{A}$              | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202759.png" alt="image-20210413202759229" style="zoom:50%;" /> |
-| AND    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202815.png" alt="File:And-gate.png" style="width: 50%;" /> | $out = A \wedge B$           | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413202847.png" alt="image-20210413202847560" style="zoom:50%;" /> |
-| NAND   | <img src="http://www.categories.acsl.org/wiki/images/thumb/5/58/Nand-gate-en.svg/500px-Nand-gate-en.svg.png" alt="File:Nand-gate-en.svg" style="width:50%;" /> | $out = \overline{A\wedge B}$ | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203258.png" alt="image-20210413203258518" style="zoom:50%;" /> |
-| OR     | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203349.png" alt="File:Or-gate-en.svg" style="width:50%;" /> | $out = A\vee B$              | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203426.png" alt="image-20210413203426284" style="zoom:50%;" /> |
-| NOR    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203449.png" alt="File:Nor-gate-en.svg" style="width:50%;" /> | $out = \overline{A\vee B}$   | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203517.png" alt="image-20210413203517904" style="zoom:50%;" /> |
-| XOR    | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203544.png" alt="File:Xor-gate-en.svg" style="width:50%;" /> | $out = A\oplus B$            | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203659.png" alt="image-20210413203659687" style="zoom:50%;" /> |
-| XNOR   | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203603.png" alt="File:Xnor-gate-en.svg" style="width:50%;" /> | $out = \overline{A\oplus B}$ | <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203717.png" alt="image-20210413203717925" style="zoom:50%;" /> |
+| BUFFER | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413202010.png" alt="File:Buffer-gate-en.svg" style="width: 50%" /> | $out = A$                    | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413202743.png" alt="image-20210413202743274" style="zoom:50%;" /> |
+| NOT    | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413202704.png" alt="File:Not-gate-en.svg" style="width: 50%;" /> | $out = \bar{A}$              | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413202759.png" alt="image-20210413202759229" style="zoom:50%;" /> |
+| AND    | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413202815.png" alt="File:And-gate.png" style="width: 50%;" /> | $out = A \wedge B$           | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413202847.png" alt="image-20210413202847560" style="zoom:50%;" /> |
+| NAND   | <img src="http://www.categories.acsl.org/wiki/images/thumb/5/58/Nand-gate-en.svg/500px-Nand-gate-en.svg.png" alt="File:Nand-gate-en.svg" style="width:50%;" /> | $out = \overline{A\wedge B}$ | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203258.png" alt="image-20210413203258518" style="zoom:50%;" /> |
+| OR     | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203349.png" alt="File:Or-gate-en.svg" style="width:50%;" /> | $out = A\vee B$              | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203426.png" alt="image-20210413203426284" style="zoom:50%;" /> |
+| NOR    | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203449.png" alt="File:Nor-gate-en.svg" style="width:50%;" /> | $out = \overline{A\vee B}$   | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203517.png" alt="image-20210413203517904" style="zoom:50%;" /> |
+| XOR    | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203544.png" alt="File:Xor-gate-en.svg" style="width:50%;" /> | $out = A\oplus B$            | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203659.png" alt="image-20210413203659687" style="zoom:50%;" /> |
+| XNOR   | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203603.png" alt="File:Xnor-gate-en.svg" style="width:50%;" /> | $out = \overline{A\oplus B}$ | <img src="https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203717.png" alt="image-20210413203717925" style="zoom:50%;" /> |
 
 ### 3.3 例题
 
@@ -318,7 +318,7 @@ LOC部分引⽤⼀个LABEL或者⼀个immediate data，如常数 `321`。
 
 How many ordered-4-tuples (A, B, C, D) make the following circuit TRUE?
 
-![File:Circuit-sample2.svg](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413203947.png)
+![File:Circuit-sample2.svg](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413203947.png)
 
 **解答：**
 
@@ -328,7 +328,7 @@ How many ordered-4-tuples (A, B, C, D) make the following circuit TRUE?
 
 第三步： 列表枚举（和 Boolean Expression那个专题一样的操作）
 
-![image-20210413204253506](https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210413204253.png)
+![image-20210413204253506](https://markdown-img-1304853431.file.myqcloud.com/mark-markdown-imagebed-master/20210413204253.png)
 
 
 ### 3.4 练习
